--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-shell",
+  "name": "shell",
   "version": "1.0.0",
   "description": "Node Powershell demo",
   "main": "app.js",
@@ -14,5 +14,14 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "node-powershell": "^3.3.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oxyo/node-shell.git"
+  },
+  "bugs": {
+    "url": "https://github.com/oxyo/node-shell/issues"
+  },
+  "homepage": "https://github.com/oxyo/node-shell#readme"
 }
